# Wifibot

./: .gitignore  LICENSE  main.cpp  meson.build  plot-data.ods
.cache/clangd/index/: gui.cpp.D011DFA06B032FA5.idx  gui.h.2043004FCE357019.idx  main.cpp.6EBEAF7D8787940B.idx  mainorder.cpp.EF8FD48DAD8F7851.idx  order.cpp.D6B81E8263557242.idx  order.h.87D58485F4F828CD.idx  socket.cpp.075BEB5118D750D8.idx  socket.h.F00BE302B667473E.idx  wifibot.cpp.9DFC3A7483593F1E.idx  wifibot.h.DC1F26597F8B9AEE.idx
data/: gresource.xml  icons.gresource.xml
includes/: gui.h  order.h  socket.h  wifibot.h
src/: gui.cpp  gui.hpp  main.cpp  order.cpp  order.hpp  socket.cpp  socket.hpp  wifibot.cpp  wifibot.hpp
